# NCNN

./: README.md  local.properties
app/: build.gradle
app/src/main/jni/: Android.mk  Application.mk  CMakeLists.txt  squeezencnn_jni.cpp
gradle/wrapper/: gradle-wrapper.properties
